Fix Get All users overlapping

--- a/src/app/components/event-entry/event-entry.component.scss
+++ b/src/app/components/event-entry/event-entry.component.scss
@@ -7,6 +7,10 @@
   position: relative;
   width: 100%;
 
+  .text {
+    padding-right: 1.5rem;
+  }
+
   .all-users {
     position: absolute;
     right: 10px;
